--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -3,9 +3,9 @@ body {
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
-    //  background-color: #2D3333;
+    //  background-color: white;
     //  .content {
-    //   font-size: 12px;
+    //   font-size: 14px;
     //  }
     //  h1 {
     //   color: black;
