--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -4,6 +4,7 @@ body {
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
 background-color: white;
+}
 .content {
 font-size: 14px;
 }
