--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,4 +1,4 @@
-body {
+    // body {
     /***
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
@@ -11,4 +11,4 @@ body {
     // h1 {
     // color: white;
     // }
-    //}
+    // }
