--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,14 +1,21 @@
-    // body {
+body {
     /***
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
-    // background-color: white;
-    // }
-    // .content {
-    // font-size: 14px;
-    // }
-    // h1 {
-    // color: white;
-    // }
-    // }
+background-color: #333B3D;
+color: #FFFEF5;
+}
+.content {
+font-size: 16px;
+}
+h1 {
+color: #FFFEF5;
+font-family: "Merriweather", serif;
+font-size: 32px;
+}
+p {
+  font-family: "PT Serif", serif;
+  font-size: 18px;
+}
+}
