--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -3,6 +3,9 @@ body {
       ADD YOUR CUSTOM STYLIING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
+
+    @import url(//fonts.googleapis.com/css?family=PT+Serif);
+    
 background-color: #333B3D;
 color: #FFFEF5;
 }
