--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -4,7 +4,8 @@ body {
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
 
-    @import url(//fonts.googleapis.com/css?family=PT+Serif);
+@import url(//fonts.googleapis.com/css?family=PT+Serif);
+@import url(//fonts.googleapis.com/css?family=Merriweather);
     
 background-color: #333B3D;
 color: #FFFEF5;
