--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -7,14 +7,14 @@ body {
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
 
-background-color: #333B3D;
-color: #FFFEF5;
+background-color: #F7F6F0;
+color: #3A3A3A;
 }
 .content {
 font-size: 16px;
 }
 h1 {
-color: #FFFEF5;
+color: #3A3A3A;
 font-family: "Merriweather", serif;
 font-size: 32px;
 }
