--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -14,13 +14,13 @@ background: #FFFBF4;
 font-size: 16px;
 }
 h1 {
-color: #3A3A3A;
+color: #262626;
 font-family: "Merriweather", serif;
 font-size: 32px;
 }
 p {
   font-family: "PT Serif", serif;
   font-size: 18px;
-  color: #3A3A3A;
+  color: #262626;
 }
 
