--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -18,6 +18,11 @@ color: #262626;
 font-family: "Merriweather", serif;
 font-size: 32px;
 }
+h1 {
+color: #262626;
+font-family: "Merriweather", serif;
+font-size: 28px;
+}
 p {
   font-family: "PT Serif", serif;
   font-size: 18px;
