--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -7,7 +7,7 @@ body {
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
 
-background: #FFFBF9;
+background: #FFFBFD;
 
 }
 .content {
