--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -7,7 +7,7 @@ body {
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
 
-background: #FFFDFA;
+background: #FFFEFD;
 
 }
 .content {
@@ -23,6 +23,11 @@ color: #262626;
 font-family: "Merriweather", serif;
 font-size: 28px;
 }
+h3 {
+  color: #262626;
+  font-family: "Merriweather", serif;
+  font-size: 28px;
+  }
 p {
   font-family: "PT Serif", serif;
   font-size: 18px;
