--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -9,6 +9,10 @@ body {
 
 background: #FFFEFD;
 
+color: #262626;
+font-family: "Merriweather", serif;
+font-size: 28px;
+  
 }
 .content {
 font-size: 16px;
